apps/homelab/immich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
    - name: gateway-internal
      namespace: envoy-gateway-system
  hostnames:
    - photos.urosevicvuk.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
